@@ -10,6 +10,12 @@ Milestone 100
     std::string_view and std::optional.
   * Added SkSurface::resolveMSAA api to force Skia to resolve MSAA draws. Useful for when
     Skia wraps a client's texture as the resolve target.
+  * All of the `makeShader` functions associated with `SkRuntimeEffect` no longer take an
+    `isOpaque` parameter. These functions will now make a best effort to determine if your
+    shader always produces opaque output, and optimize accordingly. If you definitely want your
+    shader to produce opaque output, do so in the shader's SkSL code. This can be done by adjusting
+    any `return` statement in your shader with a swizzle: `return color.rgb1;`.
+    https://review.skia.org/506462
 
 * * *
 
